--- a/src/app/dashboard/pages/layout-page/layout-page.component.html
+++ b/src/app/dashboard/pages/layout-page/layout-page.component.html
@@ -15,6 +15,6 @@
     </gridstack>
 </div>
 
-<div class="fixed bottom-0 left-0 bg-orange-400 w-full">
+<div class="fixed bottom-0 left-0 bg-red-400 w-full">
     <app-footer></app-footer>
 </div>
