--- a/src/app/dashboard/pages/layout-page/layout-page.component.html
+++ b/src/app/dashboard/pages/layout-page/layout-page.component.html
@@ -3,11 +3,11 @@
 </div>
 
 <div class="flex justify-content-center flex-wrap">
-    <p-button label="Agregar" [raised]="true" class="m-2" (click)="add()"></p-button>
-    <p-button label="Guardar" [raised]="true" severity="success" class="m-2" (click)="saveGrid()"></p-button>
-    <p-button label="Limpiar" [raised]="true" severity="secondary" class="m-2" (click)="clearGrid()"></p-button>
-    <p-button label="Cargar" [raised]="true" severity="info" class="m-2" (click)="loadGrid()"></p-button>
-    <p-button label="Eliminar" [raised]="true" severity="danger" class="m-2" (click)="delete()"></p-button>
+    <p-button label="Add" [raised]="true" class="m-2" (click)="add()"></p-button>
+    <p-button label="Save" [raised]="true" severity="success" class="m-2" (click)="saveGrid()"></p-button>
+    <p-button label="Clean" [raised]="true" severity="secondary" class="m-2" (click)="clearGrid()"></p-button>
+    <p-button label="Load" [raised]="true" severity="info" class="m-2" (click)="loadGrid()"></p-button>
+    <p-button label="Delete" [raised]="true" severity="danger" class="m-2" (click)="delete()"></p-button>
 </div>
 
 <div class="h-full">
